# local-honcho

./: .env.template  .env.test.example  PRD.md  README.md  fix_orphan_representations.sql  fix_orphan_work_units.sql  honcho-pi.spec  migrate.py  migrate_script.sql  pyproject.toml
docs/proposals/: queue-retry-error-handling.md
migrations/: add_hybrid_search_to_messages.py  add_hybrid_search_to_messages.sql  env.py
migrations/versions/: adb68784e753_add_hybrid_search_support.py
pyinstaller/: .env.template  .gitignore  LICENSE  PYINSTALLER_MIGRATION.md  README.md  build.sh  pyproject.toml
pyinstaller/build-scripts/: honcho-pi.spec  pyinstaller-build.py
pyinstaller/docs/: installer-test-design.md
pyinstaller/src/honcho_pi/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  pi_integration.py  services.py
pyinstaller/src/honcho_pi/commands/: __init__.py  configure.py  doctor.py  self_cmd.py  status.py
pyinstaller/src/honcho_pi/package_data/pi-extension/: .gitkeep  settings-snippet.json
pyinstaller/src/honcho_pi/package_data/systemd/: README.md  honcho-api.service  honcho-deriver.service
pyinstaller/tests/: __init__.py  conftest.py  pytest.ini  test_installer_e2e.py  test_interactive_install.py  test_phase1_environment.py  test_phase2_pi_install.py  test_phase3_honcho_install.py  test_phase4_services.py  test_phase5_memory.py  test_phase6_extension.py
pyinstaller/tests/docker/: Dockerfile  entrypoint.sh
scripts/: clean_blanks.py  dist_script.py  embed_tar.sh  honcho-service  install-systemd.sh  re_embed_messages.py  reembed_documents.py  run-tests.sh  validate_installer.sh
sdks/typescript/: bunfig.toml
src/: config.py  db.py  dependencies.py  embedding_client.py  models.py  reranker_client.py
src/crud/: __init__.py  document.py  representation.py
src/deriver/: deriver.py  enqueue.py  error_tracker.py  queue_manager.py  wrr_metrics.py  wrr_queries.py
src/honcho_pi/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  pi_integration.py  services.py
src/routers/: conclusions.py  messages.py  peers.py  sessions.py  workspaces.py
src/schemas/: __init__.py  api.py
src/telemetry/: emitter.py
src/utils/: agent_tools.py  search.py
tests/: README.md  conftest.py  conftest_v2.py  test_hybrid_search.py  test_search_comparison.py
tests/bench/: harness.py
tests/deriver/: test_error_tracker.py  test_queue_processing.py  test_wrr_integration.py  test_wrr_metrics.py  test_wrr_queries.py  test_wrr_queue_manager.py  test_wrr_quotas.py
tests/fixtures/: honcho_dev_data.py
(+34 files in other folders)
