[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honcho-pi"
version = "1.0.0"
description = "PyInstaller-native distribution of Honcho memory service with pi-mono integration"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "Honcho Pi Maintainers" },
]
keywords = [
    "honcho",
    "pi-mono",
    "memory",
    "agentic",
    "pyinstaller",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "toml>=0.10.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "jinja2>=3.1.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
pi-extension = [
    "watchdog>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
honcho-pi = "honcho_pi.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/honcho_pi"]
include = [
    "/src/honcho_pi/package_data",
]

[tool.hatch.version]
path = "src/honcho_pi/__init__.py"

[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "D",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "D100",
    "D104",
]

[tool.ruff.isort]
known-first-party = ["honcho_pi"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
